--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,19 @@ body {
     overflow-x: hidden;
     
 }
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
 h1 {
     font-weight: bold;
 }
