--- a/css/style.css
+++ b/css/style.css
@@ -218,6 +218,8 @@ h1 {
     border: 18px solid var(--primaryTwo);
     margin-top: 20px;
     box-shadow: 0 0px 25px 0px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    height: 100%;
 }
 .main .text {
     margin-left: -50px;
@@ -339,6 +341,8 @@ h1 {
     }
     .main .pic img {
         margin-top: 20px;
+        width: 100%;
+        height: 100%;
     }
     .main .text {
     margin-left: 0px;
