--- a/css/style.css
+++ b/css/style.css
@@ -216,11 +216,9 @@ h1 {
 
 .main .pic img {
     border-radius: 50%;
-    border: 18px solid var(--primaryTwo);
+    border: 17px solid var(--primaryTwo);
     margin-top: 20px;
     box-shadow: 0 0px 25px 0px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    height: 100%;
 }
 .main .text {
     margin-left: -500px;
@@ -341,8 +339,6 @@ h1 {
     }
     .main .pic img {
         margin-top: 20px;
-        width: 100%;
-        height: 100%;
     }
     .main .text {
     margin-left: 0px;
@@ -375,7 +371,48 @@ h1 {
         width: 95%;
     }
 }
-
+@media screen and (min-width: 600px) {
+    .m {
+        margin-left: 0%;
+    }
+  .main {
+      margin-left: 0px;
+      top: 10%;
+    }
+    .main .pic img {
+        margin-top: 20px;
+    }
+    .main .text {
+    margin-left: 0px;
+}
+    .main .text h1 {
+        font-size: 40px;
+    }
+    .work-examples {
+        margin-left: 0px;
+        top: 10%;
+    }
+    .main .text .bt-two {
+        margin-bottom: 40px;
+    }
+    .main .text .bt-two .btn-one {
+        padding-left: 14px;
+        padding-right: 14px;
+    }
+    .main .text .bt-two .btn-two {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    .contact {
+        margin-left: 0px;
+        top: 10%;
+        margin-left: 20px;
+    }
+    .contact .card {
+        margin-bottom: 20px;
+        width: 95%;
+    }
+}
 @media only screen and (min-width: 768px) {
     .navbar-default .navbar-nav li .cv-cv
     {
@@ -387,10 +424,6 @@ h1 {
     }
     .sidenav {
         display: none;
-    }
-    .main .pic img {
-        width: 90%;
-        height: 90%;
     }
     .main .text {
         margin-left: 2%;
@@ -439,10 +472,6 @@ h1 {
     top: 40%;
     
 }
-.main .pic img {
-    width: 100%;
-    height: 100%;
-    }
 .main .text {
     margin-left: 6%;
 }
@@ -488,10 +517,6 @@ h1 {
 .main .text {
     margin-left: -2%;
 }
-.main .pic img {
-    width: 80%;
-    height: 80%;
-    }
 .work-examples {
         margin-left: 38%;
     }
@@ -528,10 +553,6 @@ h1 {
 .main .text {
     margin-left: -2%;
 }
-.main .pic img {
-    width: 80%;
-    height: 80%;
-    }
 .work-examples {
         margin-left: 33%;
     }
@@ -567,15 +588,11 @@ h1 {
 .main .text {
     margin-left: -2%;
 }
-.main .pic img {
-    width: 80%;
-    height: 80%;
-    }
 .work-examples {
         margin-left: 30%;
     }
     .contact {
-        margin-left: 33%;
+        margin-left: 30%;
     }
     .cv {
         margin-left: 30%;
